# obrag

./: .dockerignore  .gitignore  AGENTS.md  Dockerfile.backend  Dockerfile.frontend  README.md  chat-test.html  database.db  day3.ipynb  docker-compose.yml  pyproject.toml  skills-lock.json
ai_workflow/: decompose-task.md  implement-feature.md  leagcy-implement-feature.md  legacy-plan-project.md  legacy-verify-feature.md  plan-project.md  plan-subtask.md  verify-feature.md
character/: bouncing_svg.html
chroma_db/: chroma.sqlite3
docs/: .sync_registry.json  RAG_IMPROVEMENT_RESEARCH_REVISED.md  code-quality-audit.md  prd.md  sdd-workflow.md
docs/api/: markdown_preprocessor.md
docs/design/: frontend-design-plan.md
docs/features/: chroma_store.md  folder_scanner.md  markdown_preprocessor.md
docs/spec/: findings.md  mission.md  roadmap.md  tech-stack.md
docs/subtask/: current_task.md
front/: eslint.config.mjs  next.config.ts  package-lock.json  package.json
front/app/: globals.css  layout.tsx  page.tsx
front/components/: character.tsx  chat-interface.tsx  embedding-scope-modal.tsx  embedding-status.tsx  folder-tree.tsx  loading-character.tsx  main-menu.tsx  para-dashboard.tsx  project-manager.tsx  review-engine.tsx  sad-character.tsx  settings-panel.tsx  topic-manager.tsx
front/lib/: api-client.ts
notebook/: Transformer models.md  day2.ipynb  embed.ipynb
pdf/: architecture_diagram.html  dataflow_diagram.html
scripts/: benchmark_e5.py  build-all.sh  build-backend.sh  build-frontend.sh
src/: initial.py  run_server.py  type.py
src/api/: __init__.py  (+2 more)
(+157 files in other folders)
